[tool.poetry]
name = "mappit-docs"
version = "0.0.1"
description = ""
authors = ["Rasika Amaratissa <rasika.am@gmail.com>", "Mat Munn <mat@matmunn.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sphinx-graphql = "^0.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-httpdomain = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
